fixing issue where images take only 20% on small screens

--- a/taskmanager/static/css/style.css
+++ b/taskmanager/static/css/style.css
@@ -104,11 +104,13 @@
 
   .history-image-container {
       order: 1;
+      max-width: 100%;
   }
 
   .history-image {
       width: 100%; 
       height: auto;
+      min-height: 100px;
   }
 
   .cinematographe,
